apps/uptime-kuma/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: http
      protocol: TCP
      name: http
